tests/NormalTests/paczka1/fuzzy1/14313621.err
Error in line 10: 0av0T2Z A9 139,09
Error in line 8: 0av0T2Z A9 63,3
Error in line 20: 0av0T2Z S929 96,9
Error in line 15: YGvFoZ S986 88,5
Error in line 11: Mku S634 23,5
Error in line 27: Mku S986 95,6
Error in line 29: ZyxOMx2 S634 43,8
